--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contacto.html">Contacto</a>
+              <a class="nav-link active" href="#contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
