--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <footer class="bg-dark text-white text-center py-3 mt-auto">
       <div class="container">
         <p class="mb-0">
-          &copy; 2025 Jesús Aldana - Todos los derechos reservados
+          &copy; 2025 Emerson Martinez - Todos los derechos reservados
         </p>
       </div>
     </footer>
