optimizacion de imagenes

--- a/galeria.html
+++ b/galeria.html
@@ -50,7 +50,7 @@
         <!-- Card 1 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img/galeria1.jpg" class="card-img-top" alt="Foto 1" />
+            <img src="img/galeria1.webp" class="card-img-top" alt="Foto 1" />
             <div class="card-body">
               <h5 class="card-title">Retrato Natural</h5>
               <p class="card-text">
@@ -63,7 +63,7 @@
         <!-- Card 2 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img/galeria2.jpg" class="card-img-top" alt="Foto 2" />
+            <img src="img/galeria2.webp" class="card-img-top" alt="Foto 2" />
             <div class="card-body">
               <h5 class="card-title">Paisaje Dorado</h5>
               <p class="card-text">La luz del atardecer sobre los arboles.</p>
@@ -74,7 +74,7 @@
         <!-- Card 3 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img/galeria3.jpg" class="card-img-top" alt="Foto 3" />
+            <img src="img/galeria3.webp" class="card-img-top" alt="Foto 3" />
             <div class="card-body">
               <h5 class="card-title">Mirada Urbana</h5>
               <p class="card-text">Detalles que hablan en la ciudad.</p>
